06-persistentvolumes/nginx.yaml

# Service eksponerer Deployment'en så den kan nås via netværket
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: webapps     # Ressourcen oprettes i webapps namespace i stedet for default

spec:
  type: ClusterIP        # Kun tilgængelig internt i clusteret — Ingress håndterer ekstern adgang
  selector:
    app: nginx           # Sender trafik videre til Pods med dette label

  ports:
    - port: 80           # Port som Service'en lytter på internt i clusteret
      targetPort: 80     # Port på Pod'en som trafikken sendes videre til
